[package]
name = "rustls-post-quantum"
# ADAPTED `rustls-post-quantum` version in this fork TO KEEP CI HAPPY
version = "0.3.0-dev"
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Experimental support for post-quantum key exchange in rustls"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false

[dependencies]
# WITH ADAPTED MAIN PACKAGE NAME for this fork (MISSING version - should be OK in this fork)
rustls = { features = ["aws_lc_rs", "prefer-post-quantum"], package = "portable-rustls", path = "../rustls" }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
webpki-roots = "0.26"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
