[package]
name = "rustls-provider-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Integration tests for Rustls cryptography providers"
publish = false

[dependencies]
hex = "0.4"
provider-example = { package = "rustls-provider-example", version = "0.0.1", path = "../provider-example" }
# WITH ADAPTED MAIN PACKAGE NAME for this fork (MISSING version - should be OK in this fork)
rustls = { features = ["aws_lc_rs", "logging"], package = "portable-rustls", path = "../rustls" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
